Added mdtValue class

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -57,6 +57,8 @@ set (SOURCES_FILES
           mdtAbstractIo.cpp
           mdtAnalogIo.cpp
           mdtDigitalIo.cpp
+          # Value
+          mdtValue.cpp
           # Main application
           mdtApplication.cpp
     )
