Added new proxy model to provide natural sort

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -59,6 +59,7 @@ set (HEADER_FILES
           mdtSqlTableWidget.h
           mdtSqlWindow.h
           mdtSqlSelectionDialog.h
+          mdtSortFilterProxyModel.h
           # Essais
           mdtParentChildTableModel.h
           mdtParentChildTableItem.h
@@ -93,6 +94,7 @@ set (SOURCES_FILES
           mdtSqlTableWidget.cpp
           mdtSqlWindow.cpp
           mdtSqlSelectionDialog.cpp
+          mdtSortFilterProxyModel.cpp
           # Essais
           mdtParentChildTableModel.cpp
           mdtParentChildTableItem.cpp
