Working on mdtCableList

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -28,6 +28,7 @@ set (FORM_FILES
           src/mdtClVehicleTypeEditor.ui
           src/mdtClArticleEditor.ui
           src/mdtClUnitEditor.ui
+          src/mdtClUnitConnectionEditor.ui
     )
 
 # Fichiers à traiter par le compilateur moc
