Working on Graph

--- a/src/mdtutils/CMakeLists.txt
+++ b/src/mdtutils/CMakeLists.txt
@@ -61,8 +61,10 @@ set (SOURCES_FILES
           mdtValue.cpp
           # mdtGraph
           mdtGraphVertexData.cpp
+          mdtGraphEdgeData.cpp
           mdtGraph.cpp
           mdtGraphVertex.cpp
+          mdtGraphVertexAdjacent.cpp
           # Main application
           mdtApplication.cpp
     )
