Working on Cable list tool

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -32,6 +32,7 @@ set (SOURCES_FILES
           src/mdtClTerminalEditorDialog.cpp
           src/mdtClUnitVehicleType.cpp
           src/mdtClArticleLinkDialog.cpp
+          src/mdtClArticle.cpp
     )
 
 # Qt ui files
