Commit before alter MODBUS Wago I/O detection

--- a/src/mdtdevice/CMakeLists.txt
+++ b/src/mdtdevice/CMakeLists.txt
@@ -33,6 +33,7 @@ set (SOURCES_FILES
           mdtDeviceModbus.cpp
           mdtDeviceModbusWago.cpp
           mdtDeviceModbusWagoModule.cpp
+          mdtDeviceModbusWagoModuleRtd.cpp
           mdtDeviceScpi.cpp
           mdtDeviceU3606A.cpp
           mdtDeviceDSO1000A.cpp
