Working on cable list tool: first test with graphic link representation

--- a/tools/mdtcablelist/CMakeLists.txt
+++ b/tools/mdtcablelist/CMakeLists.txt
@@ -44,6 +44,7 @@ set (SOURCES_FILES
           src/mdtClArticle.cpp
           src/mdtClPathGraphicsConnection.cpp
           src/mdtClPathGraphicsLink.cpp
+          src/mdtClPathGraph.cpp
     )
 
 # Qt ui files
