Working on SQL table creation generation

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -107,6 +107,7 @@ set (SOURCES_FILES
           mdtSqlForm.cpp
           mdtSqlFormWindow.cpp
           mdtSqlFormDialog.cpp
+          mdtSqlSchemaTable.cpp
           # Essais
           mdtParentChildTableModel.cpp
           mdtParentChildTableItem.cpp
