Working on cable list tool

--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -47,6 +47,7 @@ set (TEST_SOURCES_FILES
           ../src/mdtClPathGraphicsLink.cpp
           ../src/mdtClPathGraph.cpp
           ../src/mdtClPathGraphDialog.cpp
+          ../src/mdtClDatabaseSchema.cpp
     )
 
 # Qt ui files
