Working on cable list tool

--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set (TEST_HEADER_FILES
           ../src/mdtClArticleComponentDialog.h
           ../src/mdtClArticleLinkDialog.h
           ../src/mdtClPathGraphDialog.h
+          ../src/mdtClMainWindow.h
    )
 
 # Source files
@@ -48,6 +49,7 @@ set (TEST_SOURCES_FILES
           ../src/mdtClPathGraph.cpp
           ../src/mdtClPathGraphDialog.cpp
           ../src/mdtClDatabaseSchema.cpp
+          ../src/mdtClMainWindow.cpp
     )
 
 # Qt ui files
@@ -63,6 +65,7 @@ set (TEST_FORM_FILES
           ../src/mdtClArticleComponentDialog.ui
           ../src/mdtClArticleLinkDialog.ui
           ../src/mdtClPathGraphDialog.ui
+          ../src/mdtClMainWindow.ui
     )
 
 # Access to project's include files
