Working on field map: replaced fieldMapField struct by a class that contains a QSqlField to have more attributes

--- a/src/mdtutilsgui/CMakeLists.txt
+++ b/src/mdtutilsgui/CMakeLists.txt
@@ -92,6 +92,7 @@ set (SOURCES_FILES
           mdtDataTableManager.cpp
           mdtDataTableModel.cpp
           mdtFieldMap.cpp
+          mdtFieldMapField.cpp
           mdtFieldMapItem.cpp
           mdtFieldMapDialog.cpp
           mdtFieldMapItemDialog.cpp
