--- a/tools/mdtcablelist/tests/CMakeLists.txt
+++ b/tools/mdtcablelist/tests/CMakeLists.txt
@@ -11,6 +11,7 @@ project (multidiagtools)
 
 # Header files containing Qt Q_OBJECT macro
 set (TEST_HEADER_FILES
+          ../src/mdtClEditor.h
           ../src/mdtClVehicleTypeEditor.h
           ../src/mdtClArticleEditor.h
           ../src/mdtClUnitEditor.h
@@ -28,6 +29,8 @@ set (TEST_HEADER_FILES
 
 # Source files
 set (TEST_SOURCES_FILES 
+          ../src/mdtClBase.cpp
+          ../src/mdtClEditor.cpp
           ../src/mdtClVehicleTypeEditor.cpp
           ../src/mdtClArticleEditor.cpp
           ../src/mdtClUnit.cpp
